@@ -1,3 +1,7 @@
+2003-03-22    John E. Joganic <john@joganic.com>
+
+	* Added ncurses detection.
+
 2003-03-08    John E. Joganic <john@joganic.com>
 
 	* Added curses functionality to xidump.c, now default
